Removed most references to Vectors and all to Hashtables